force-app/main/default/objects/Employee_Technology_Access__c/Employee_Technology_Access__c.object-meta.xml
<CustomObject>
    <description>Object used to track Ubiquity Employee Technology Access internally</description>
    <label>Employee Technology Access</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Employee Technology Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Technology Accesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>