force-app/main/default/objects/Employee_Technology_Access__c/fields/Access_Granted_Date__c.field-meta.xml
<CustomField>
    <fullName>Access_Granted_Date__c</fullName>
    <description>Date access was granted by technology owner</description>
    <inlineHelpText>Date access was granted by technology owner</inlineHelpText>
    <label>Access Granted Date</label>
    <type>Date</type>
</CustomField>