force-app/main/default/objects/Employee_Technology_Access__c/fields/Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Access_Level__c</fullName>
    <description>Access level given to User</description>
    <inlineHelpText>Access level given to User</inlineHelpText>
    <label>Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
            <value>
                <fullName>View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>