force-app/main/default/objects/Employee_Technology_Access__c/fields/Access_Removed_Date__c.field-meta.xml
<CustomField>
    <fullName>Access_Removed_Date__c</fullName>
    <description>Date access to technology is removed</description>
    <inlineHelpText>Date access to technology is removed</inlineHelpText>
    <label>Access Removed Date</label>
    <type>DateTime</type>
</CustomField>