force-app/main/default/objects/Employee_Technology_Access__c/fields/Access_Removed_Requested__c.field-meta.xml
<CustomField>
    <fullName>Access_Removed_Requested__c</fullName>
    <description>Date Access removal was requested</description>
    <inlineHelpText>Date Access removal was requested</inlineHelpText>
    <label>Access Removed Requested</label>
    <type>Date</type>
</CustomField>