force-app/main/default/objects/Employee_Technology_Access__c/fields/Access_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Access_Requested_Date__c</fullName>
    <description>Date access requested</description>
    <inlineHelpText>Date access requested</inlineHelpText>
    <label>Access Requested Date</label>
    <type>Date</type>
</CustomField>