force-app/main/default/objects/Employee_Technology_Access__c/fields/Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date__c</fullName>
    <description>Employee Hire Date</description>
    <formula>Contact__r.Hire_Date__c</formula>
    <inlineHelpText>Employee Hire Date</inlineHelpText>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>