force-app/main/default/objects/Employee_Technology_Access__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <description>Type of license used for the product: shared with a team, or individual</description>
    <inlineHelpText>Type of license used for the product: shared with a team, or individual</inlineHelpText>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>