force-app/main/default/objects/Employee_Technology_Access__c/fields/Modification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Modification_Notes__c</fullName>
    <description>Access Modification Notes</description>
    <inlineHelpText>Access Modification Notes</inlineHelpText>
    <label>Modification Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>