force-app/main/default/objects/Employee_Technology_Access__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes about access given</description>
    <inlineHelpText>Notes about access given</inlineHelpText>
    <label>Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>