force-app/main/default/objects/Employee_Technology_Access__c/fields/Paradigm_Roles__c.field-meta.xml
<CustomField>
    <fullName>Paradigm_Roles__c</fullName>
    <description>Roles required for Paradigm</description>
    <inlineHelpText>Roles required for Paradigm</inlineHelpText>
    <label>Paradigm Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3(16) Account Manager</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Admin Jobs Access Role</fullName>
            </value>
            <value>
                <fullName>All_Reports</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Business Intelligence Management</fullName>
            </value>
            <value>
                <fullName>Client Service Management</fullName>
            </value>
            <value>
                <fullName>Client Service Platinum</fullName>
                <isActive>false</isActive>
                <label>Client Service Platinum</label>
            </value>
            <value>
                <fullName>Client Service Support</fullName>
                <isActive>false</isActive>
                <label>Client Service Support</label>
            </value>
            <value>
                <fullName>Client Success - Tier 1</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Compliance Manager</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>CSR</fullName>
                <isActive>false</isActive>
                <label>CSR</label>
            </value>
            <value>
                <fullName>CSR (CST)</fullName>
            </value>
            <value>
                <fullName>Data_Corrections</fullName>
            </value>
            <value>
                <fullName>Distribution_Management</fullName>
            </value>
            <value>
                <fullName>Distributions</fullName>
            </value>
            <value>
                <fullName>EditSubscription</fullName>
                <isActive>false</isActive>
                <label>EditSubscription</label>
            </value>
            <value>
                <fullName>Financial Operations</fullName>
            </value>
            <value>
                <fullName>Full System Admin</fullName>
            </value>
            <value>
                <fullName>Implementations</fullName>
            </value>
            <value>
                <fullName>Internal Auditor</fullName>
            </value>
            <value>
                <fullName>Investment_Integrity</fullName>
            </value>
            <value>
                <fullName>Investment Integrity</fullName>
                <isActive>false</isActive>
                <label>Investment Integrity</label>
            </value>
            <value>
                <fullName>Job_Management</fullName>
            </value>
            <value>
                <fullName>Learning and Development</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operations Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>