force-app/main/default/objects/Employee_Technology_Access__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Name of Product</description>
    <inlineHelpText>Name of Product</inlineHelpText>
    <label>Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>15Five</fullName>
            </value>
            <value>
                <fullName>360Learning</fullName>
            </value>
            <value>
                <fullName>Adobe Acrobat</fullName>
                <isActive>false</isActive>
                <label>Adobe Acrobat</label>
            </value>
            <value>
                <fullName>ASC</fullName>
            </value>
            <value>
                <fullName>ASC 5500</fullName>
            </value>
            <value>
                <fullName>ASC VAL</fullName>
            </value>
            <value>
                <fullName>Atlassian (Jira)</fullName>
            </value>
            <value>
                <fullName>ATS (Applicant Tracking System)</fullName>
            </value>
            <value>
                <fullName>Authy</fullName>
            </value>
            <value>
                <fullName>Background checker</fullName>
            </value>
            <value>
                <fullName>Basecamp</fullName>
            </value>
            <value>
                <fullName>Bitly</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>BroadRidge (matrix)</fullName>
            </value>
            <value>
                <fullName>Calendly</fullName>
            </value>
            <value>
                <fullName>CallRail</fullName>
            </value>
            <value>
                <fullName>Canva</fullName>
            </value>
            <value>
                <fullName>Capshare</fullName>
            </value>
            <value>
                <fullName>CrazyEgg</fullName>
            </value>
            <value>
                <fullName>Cyberduck</fullName>
            </value>
            <value>
                <fullName>Dataloader</fullName>
            </value>
            <value>
                <fullName>DataStudio_Annual_KPI</fullName>
                <label>DataStudio - Annual KPI</label>
            </value>
            <value>
                <fullName>DataStudio - Annual Operation Metrics</fullName>
            </value>
            <value>
                <fullName>DataStudio - Growth Dashboard</fullName>
            </value>
            <value>
                <fullName>DataStudio - JPM Partner Dashboard</fullName>
            </value>
            <value>
                <fullName>Docusign</fullName>
            </value>
            <value>
                <fullName>Expensify</fullName>
            </value>
            <value>
                <fullName>Figma</fullName>
            </value>
            <value>
                <fullName>Five9</fullName>
            </value>
            <value>
                <fullName>Google Analytics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>