force-app/main/default/objects/Employee_Technology_Access__c/fields/Requested_by__c.field-meta.xml
<CustomField>
    <fullName>Requested_by__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Person requesting the access</description>
    <inlineHelpText>Person requesting the access</inlineHelpText>
    <label>Requested By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Ubiquity Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employee Technology Accesses (Requestor)</relationshipLabel>
    <relationshipName>Employee_Technology_Accesses1</relationshipName>
    <type>Lookup</type>
</CustomField>