force-app/main/default/objects/Employee_Technology_Access__c/fields/RKS_Roles__c.field-meta.xml
<CustomField>
    <fullName>RKS_Roles__c</fullName>
    <label>RKS Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Client Service Support</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Compliance Manager</fullName>
            </value>
            <value>
                <fullName>Distributions</fullName>
            </value>
            <value>
                <fullName>Financial Operations</fullName>
            </value>
            <value>
                <fullName>Full System Admin</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Internal Auditor</fullName>
            </value>
            <value>
                <fullName>Learning and Development</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>PRKS - PII</fullName>
            </value>
            <value>
                <fullName>Product Development</fullName>
            </value>
            <value>
                <fullName>Saver Success</fullName>
            </value>
            <value>
                <fullName>Sub Role - 5500 Reports PII</fullName>
            </value>
            <value>
                <fullName>Sub Role - Account Reconciliation PII</fullName>
            </value>
            <value>
                <fullName>Sub Role - Distributions Edit</fullName>
            </value>
            <value>
                <fullName>Sub Role - Distributions PII</fullName>
            </value>
            <value>
                <fullName>Sub Role - Distributions Schwab PII</fullName>
            </value>
            <value>
                <fullName>Sub Role - Distributions Super User PII</fullName>
            </value>
            <value>
                <fullName>Sub Role - Implementations Reports PII</fullName>
            </value>
            <value>
                <fullName>Sub Role – PartnerUserManagement</fullName>
                <isActive>false</isActive>
                <label>Sub Role – PartnerUserManagement</label>
            </value>
            <value>
                <fullName>Sub Role - Payroll Cash II</fullName>
            </value>
            <value>
                <fullName>Sub Role - Payroll Reports PII</fullName>
            </value>
            <value>
                <fullName>Sub Role - Plan Audit PII</fullName>
            </value>
            <value>
                <fullName>Sub Role – Profile Mergers III</fullName>
                <isActive>false</isActive>
                <label>Sub Role – Profile Mergers III</label>
            </value>
            <value>
                <fullName>Sub Role - Super Trading III</fullName>
            </value>
            <value>
                <fullName>Sub Role - Super User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>