force-app/main/default/objects/Employee_Technology_Access__c/fields/Standard_Products__c.field-meta.xml
<CustomField>
    <fullName>Standard_Products__c</fullName>
    <description>Standard Employee Technology products</description>
    <inlineHelpText>Standard Employee Technology products</inlineHelpText>
    <label>Standard Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>15Five</fullName>
                <isActive>false</isActive>
                <label>15Five</label>
            </value>
            <value>
                <fullName>360Learning</fullName>
            </value>
            <value>
                <fullName>Azure Single Sign On</fullName>
            </value>
            <value>
                <fullName>Basecamp</fullName>
                <isActive>false</isActive>
                <label>Basecamp</label>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Expensify</fullName>
                <isActive>false</isActive>
                <label>Expensify</label>
            </value>
            <value>
                <fullName>LastPass</fullName>
            </value>
            <value>
                <fullName>Lattice</fullName>
            </value>
            <value>
                <fullName>Namely</fullName>
                <isActive>false</isActive>
                <label>Namely</label>
            </value>
            <value>
                <fullName>Open Sesame</fullName>
            </value>
            <value>
                <fullName>Paylocity</fullName>
            </value>
            <value>
                <fullName>Screensteps</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Zoom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>