force-app/main/default/objects/Employee_Technology_Access__c/fields/Technology_Access_Owner__c.field-meta.xml
<CustomField>
    <fullName>Technology_Access_Owner__c</fullName>
    <description>Department that owns &amp; will grant access to the technology</description>
    <inlineHelpText>Department that owns &amp; will grant access to the technology</inlineHelpText>
    <label>Technology Access Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Client Success</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>People &amp; Culture</fullName>
            </value>
            <value>
                <fullName>PRKS</fullName>
            </value>
            <value>
                <fullName>L + D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>