force-app/main/default/objects/Employee_Technology_Access__c/fields/Ubiquity_Team__c.field-meta.xml
<CustomField>
    <fullName>Ubiquity_Team__c</fullName>
    <description>Employee&apos;s Ubiquity Team</description>
    <formula>TEXT(Contact__r.Team__c)</formula>
    <inlineHelpText>Employee&apos;s Ubiquity Team</inlineHelpText>
    <label>Ubiquity Team</label>
    <type>Text</type>
</CustomField>