force-app/main/default/objects/Employee_Technology_Access__c/recordTypes/Authorized_Signer_Access.recordType-meta.xml
<RecordType>
    <fullName>Authorized_Signer_Access</fullName>
    <active>true</active>
    <description>Authorized signers for 3rd party documents within Ubiquity</description>
    <label>Authorized Signer Access</label>
</RecordType>