force-app/main/default/objects/Employee_Technology_Access__c/recordTypes/Employee_Technology_Access.recordType-meta.xml
<RecordType>
    <fullName>Employee_Technology_Access</fullName>
    <active>true</active>
    <description>Record type for Employee Technology Access</description>
    <label>Employee Technology Access</label>
</RecordType>