force-app/main/default/objects/Employee_Technology_Access__c/recordTypes/Paradigm_Technology_Access.recordType-meta.xml
<RecordType>
    <fullName>Paradigm_Technology_Access</fullName>
    <active>true</active>
    <description>Used to request access to Paradigm and PRKS</description>
    <label>Paradigm Technology Access</label>
</RecordType>