force-app/main/default/objects/Employee_Technology_Access__c/recordTypes/Security_Admin_Access.recordType-meta.xml
<RecordType>
    <fullName>Security_Admin_Access</fullName>
    <active>true</active>
    <description>Individual authorized to control security access to various platforms</description>
    <label>Security Admin Access</label>
</RecordType>