force-app/main/default/objects/Employee_Technology_Access__c/recordTypes/Standard_Ubiquity_Package.recordType-meta.xml
<RecordType>
    <fullName>Standard_Ubiquity_Package</fullName>
    <active>true</active>
    <description>Standard Ubiquity Package Record Type - used for New Hires</description>
    <label>Standard Ubiquity Package</label>
</RecordType>