force-app/main/default/objects/Employee_Technology_Access__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Hire_Date__c</columns>
    <columns>Access_Removed_Date__c</columns>
    <columns>Contact__c</columns>
    <columns>Access_Requested_Date__c</columns>
    <columns>Access_Level__c</columns>
    <columns>License_Type__c</columns>
    <columns>Technology_Access_Owner__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>