force-app/main/default/objects/Employee_Technology_Access__c/listViews/My_Access_Requests.listView-meta.xml
<ListView>
    <fullName>My_Access_Requests</fullName>
    <columns>NAME</columns>
    <columns>Requested_by__c</columns>
    <columns>Access_Requested_Date__c</columns>
    <columns>Full_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <label>My Access Requests</label>
</ListView>